# jellyflow

./: .gitignore  CHANGELOG.md  CONTEXT.md  Cargo.toml  JELLYFLOW_SOURCE_COMMIT.txt  LICENSE-MIT  README.md
crates/jellyflow/: Cargo.toml  README.md
crates/jellyflow-core/: Cargo.toml  README.md
crates/jellyflow-core/examples/: build_graph.rs
crates/jellyflow-core/src/: lib.rs
crates/jellyflow-core/src/core/: ids.rs  imports.rs  mod.rs  model.rs  subgraph.rs  symbol_ref.rs  tests.rs  validate.rs
crates/jellyflow-core/src/core/model/: binding.rs  builder.rs  edge.rs  geometry.rs  graph.rs  mod.rs  node.rs  port.rs  resources.rs
crates/jellyflow-core/src/core/tests/: binding.rs  imports.rs  mod.rs  structural.rs  subgraph.rs  symbol_ref.rs
crates/jellyflow-core/src/core/validate/: error.rs  report.rs  storage.rs  structural.rs
crates/jellyflow-core/src/interaction/: mod.rs
crates/jellyflow-core/src/ops/: apply.rs  build.rs  diff.rs  fragment.rs  history.rs  mod.rs  mutation.rs  normalize.rs  tests.rs  transaction.rs  tx_sanity.rs
crates/jellyflow-core/src/ops/apply/: bindings.rs  dispatch.rs  edges.rs  error.rs  groups.rs  imports.rs  mod.rs  nodes.rs  ports.rs  resources.rs  sticky_notes.rs  symbols.rs
crates/jellyflow-core/src/ops/diff/: edges.rs  metadata.rs  mod.rs  nodes.rs  ports.rs
crates/jellyflow-core/src/ops/fragment/: clipboard.rs  collect.rs  mod.rs  model.rs  paste.rs  remap.rs
crates/jellyflow-core/src/ops/history/: invert.rs  store.rs
crates/jellyflow-core/src/ops/mutation/: batch.rs  collect.rs  error.rs  mod.rs  planner.rs  types.rs
crates/jellyflow-core/src/ops/normalize/: coalesce.rs  noop.rs
crates/jellyflow-core/src/ops/tests/: apply.rs  bindings.rs  diff.rs  fixtures.rs  footprint.rs  fragment.rs  history.rs  mod.rs  mutation.rs  normalize.rs  setters.rs
crates/jellyflow-core/src/ops/transaction/: batch.rs  endpoints.rs  footprint.rs  mod.rs  op.rs
crates/jellyflow-core/src/types/: mod.rs
crates/jellyflow-core/src/types/compat/: default.rs  mod.rs
crates/jellyflow-egui/: Cargo.toml  README.md
crates/jellyflow-egui/examples/: automation_builder.rs  custom_widget.rs  demo.rs  erd.rs  gallery_snapshot.rs  knowledge_board.rs  mind_map.rs  org_chart.rs  shader_graph.rs  tree.rs  workflow.rs
crates/jellyflow-egui/src/: app.rs  bridge.rs  handle_layout.rs  input.rs  lib.rs  renderer.rs  samples.rs  state.rs
crates/jellyflow-egui/src/ui/: canvas.rs  inspector.rs  mod.rs  palette.rs  toolbar.rs
crates/jellyflow-layout/: Cargo.toml  README.md
crates/jellyflow-layout/benches/: layout_engines.rs
crates/jellyflow-layout/examples/: dugong_timing.rs
crates/jellyflow-layout/src/: builtin.rs  dugong.rs  engine.rs  family.rs  freeform.rs  lib.rs  mind_map.rs  preset.rs  projection.rs  tidy_tree.rs
crates/jellyflow-layout/src/tests/: builtin.rs  dugong.rs  engine.rs  family.rs  freeform.rs  mind_map.rs  mod.rs  preset.rs  tidy_tree.rs
crates/jellyflow-open-gpui/: Cargo.toml  README.md
crates/jellyflow-open-gpui/src/: actions.rs  adapter.rs  authoring.rs  connection.rs  controls.rs  element_ids.rs  inspector.rs  json_binding.rs  lib.rs  measurement.rs  presets.rs  projection.rs  renderer.rs  repeatable.rs  sync.rs  testing.rs
crates/jellyflow-proof/: Cargo.toml  README.md
crates/jellyflow-proof/examples/: adapter_smoke.rs
crates/jellyflow-proof/src/: lib.rs  main.rs
crates/jellyflow-proof/tests/: proof.rs
crates/jellyflow-runtime/: Cargo.toml  README.md
crates/jellyflow-runtime/benches/: layout_pipeline.rs  rendering_query.rs  schema_create_node.rs
crates/jellyflow-runtime/examples/: conformance_harness.rs  dirty_scope_layout.rs  dugong_layout.rs  geometry_edge.rs  knowledge_canvas.rs  layout_engines.rs  store_dispatch.rs
crates/jellyflow-runtime/src/: lib.rs  node_origin.rs
crates/jellyflow-runtime/src/io/: config.rs  files.rs  mod.rs  tests.rs  tuning.rs  view_state.rs
crates/jellyflow-runtime/src/io/config/: defaults.rs  interaction.rs  keys.rs  state.rs  types.rs
crates/jellyflow-runtime/src/io/files/: editor_state.rs  graph.rs
crates/jellyflow-runtime/src/io/tests/: editor_state_file.rs  graph_file.rs  interaction.rs  view_state.rs
crates/jellyflow-runtime/src/io/tuning/: auto_pan.rs  mod.rs  paint_cache.rs  pan_inertia.rs  runtime.rs  spatial_index.rs
crates/jellyflow-runtime/src/io/view_state/: mod.rs  pure.rs  state.rs
crates/jellyflow-runtime/src/profile/: domain.rs  mod.rs  pipeline.rs
crates/jellyflow-runtime/src/profile/pipeline/: apply.rs  error.rs  mod.rs  tests.rs
crates/jellyflow-runtime/src/rules/: connection.rs  delete.rs  diagnostic.rs  mod.rs  plans.rs  template.rs  tests.rs
crates/jellyflow-runtime/src/rules/connection/: common.rs  connect.rs  insert.rs  reconnect.rs  typed.rs
crates/jellyflow-runtime/src/rules/delete/: builder.rs  diagnostics.rs  planner.rs  selection.rs  validation.rs
crates/jellyflow-runtime/src/rules/tests/: connect.rs  delete.rs  fixtures.rs  insert.rs  profile.rs  reconnect.rs  typed.rs
crates/jellyflow-runtime/src/runtime/: apply.rs  auto_pan.rs  callbacks.rs  changes.rs  chrome.rs  commit.rs  connection.rs  create_node.rs  drag.rs  events.rs  fit_view.rs  geometry.rs  gesture.rs  keyboard.rs  layout.rs  lookups.rs  measurement.rs  middleware.rs  mod.rs  policy.rs  rendering.rs  selection.rs  store.rs  tests.rs  utils.rs  viewport.rs
crates/jellyflow-runtime/src/runtime/auto_pan/: mod.rs  planner.rs  store.rs  types.rs
crates/jellyflow-runtime/src/schema/: migration.rs  mod.rs  registry.rs  tests.rs  types.rs
crates/jellyflow-runtime/tests/: public_surface.rs
crates/jellyflow/src/: lib.rs
crates/jellyflow/tests/: public_surface.rs
examples/canvas-jellyflow/: Cargo.toml  README.md
examples/canvas-jellyflow/src/: gallery_screenshot.rs  main.rs  measurement_bridge.rs  native_smoke.rs  node_component_kit.rs  product_gallery.rs  product_renderers.rs  visual_regression.rs
templates/headless-adapter/: Cargo.toml  README.md
templates/headless-adapter/src/: lib.rs  main.rs
templates/headless-adapter/tests/: conformance.rs
(+977 files in other folders)
