[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
authors = ["Mingzhen Zhuang <superfrankie621@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Latias94/jellyflow"
homepage = "https://github.com/Latias94/jellyflow"

[workspace.dependencies]
jellyflow-core = { version = "0.1.0", path = "crates/jellyflow-core" }
keyboard-types = { version = "0.8.3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "v5", "serde", "js"] }

[profile.dev]
opt-level = 1
debug = 1
codegen-units = 16
incremental = true

[profile.dev.build-override]
codegen-units = 16

[profile.test]
debug = 1
