[package]
name = "jellyflow-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Headless graph model, IDs, type descriptors, and interaction policy primitives for Jellyflow."

[dependencies]
fret-core = { version = "0.1.0", path = "../../crates/fret-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[lints.rust]
dead_code = "allow"

[lints.clippy]
doc_lazy_continuation = "allow"
new_without_default = "allow"
too_many_arguments = "allow"
