[workspace]
resolver = "2"

[package]
name = "open-gpui-canvas-jellyflow"
version = "0.3.0"
edition = "2024"
rust-version = "1.95"
authors = ["Mingzhen Zhuang <superfrankie621@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Latias94/jellyflow"
homepage = "https://github.com/Latias94/jellyflow"
readme = "README.md"
publish = false
description = "Native Open GPUI product gallery for Jellyflow node graphs."

[[bin]]
name = "open-gpui-canvas-jellyflow"
path = "src/main.rs"

[dependencies]
jellyflow = { path = "../../crates/jellyflow" }
jellyflow-open-gpui = { path = "../../crates/jellyflow-open-gpui" }
open_gpui = { package = "open-gpui", git = "https://github.com/Latias94/open-gpui", rev = "edca5298a294273b8e3cdba6deb6d98f29b95360", default-features = false }
open_gpui_canvas = { package = "open-gpui-canvas", git = "https://github.com/Latias94/open-gpui", rev = "edca5298a294273b8e3cdba6deb6d98f29b95360" }
open_gpui_platform = { package = "open-gpui-platform", git = "https://github.com/Latias94/open-gpui", rev = "edca5298a294273b8e3cdba6deb6d98f29b95360", default-features = false, features = ["font-kit"] }
open_gpui_ui_components = { package = "open-gpui-ui-components", git = "https://github.com/Latias94/open-gpui", rev = "edca5298a294273b8e3cdba6deb6d98f29b95360" }
open_gpui_ui_core = { package = "open-gpui-ui-core", git = "https://github.com/Latias94/open-gpui", rev = "edca5298a294273b8e3cdba6deb6d98f29b95360" }
serde_json = "1"

[dev-dependencies]
image = "0.25.1"
open_gpui = { package = "open-gpui", git = "https://github.com/Latias94/open-gpui", rev = "edca5298a294273b8e3cdba6deb6d98f29b95360", default-features = false, features = ["test-support"] }
open_gpui_platform = { package = "open-gpui-platform", git = "https://github.com/Latias94/open-gpui", rev = "edca5298a294273b8e3cdba6deb6d98f29b95360", default-features = false, features = ["font-kit", "test-support"] }
